[package]
name = "youtube-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
oauth2 = "4.4"
url = "2.4"
base64 = "0.21"
rand = "0.8"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
